@@ -1,3 +1,7 @@
+Changes between KWord 1.3.3 and 1.3.4
+=====================================
+- Ellipsis for menu entries that open dialogs (#91335)
+
 Changes between KWord 1.3.2 and 1.3.3
 =====================================
 - Fix the 3 style menus for any translation (#61007)
